# translator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  fly.toml
src/: api.rs  cache.rs  config.rs  events.rs  main.rs  transcription.rs  translator.rs  twitch.rs  ui.html  web.rs
